--- a/composer.json
+++ b/composer.json
@@ -28,12 +28,12 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\": "src/"
+            "Opie\\TaxrefClient\\": "src/"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "App\\Tests\\": "tests/"
+            "Opie\\TaxrefClient\\Tests\\": "tests/"
         }
     },
     "replace": {
